Single Sign-On with Spotify - Concluded

--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -1,8 +1,1 @@
-<h1>This is login screen!</h1>
-
-<form action="/login" method="post">
-<label for="username">Username: </label>
-<input type="text" name="username">
-<button type="submit">Test post</button>
-</form>
-
+<a class="btn btn-success" href="/auth/spotify">Sign In with Spotify Account</a>
