--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,4 @@
 <h1>{{title}}</h1>
 <p>Welcome to {{title}}</p>
 
-<button><a href="/login">Sign In with Spotify Account</a></button>
+<a class="btn btn-success" href="/auth/spotify">Sign In with Spotify Account</a>
