--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -13,10 +13,14 @@
   <div class="container-fluid m-0 p-0">
     <nav class="navbar navbar-expand-lg navbar-light mb-2">
       <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link" href="/auth/login">Login</a></li>
         <li class="nav-item"><a class="nav-link" href="/">Homepage</a></li>
+        {{#if user}}
+        <li class="nav-item"><a class="nav-link" href="/profile">Profile</a></li>
         <li class="nav-item"><a class="nav-link" href="/auth/logout">Logout</a></li>
-
+        {{else}}
+        <li class="nav-item"><a class="nav-link" href="/auth/login">Login</a></li>
+        {{/if}}
+      </ul>
     </nav>
     {{{body}}}
   </div>
