--- a/views/profile/main.hbs
+++ b/views/profile/main.hbs
@@ -1,2 +1,3 @@
 <h1>Welcome to your profile, {{user.username}}</h1>
 <img src="{{user.photoPath}}" alt="" srcset="">
+<p>TOKEN: {{user.accessToken}}</p>
