--- a/views/profile/main.hbs
+++ b/views/profile/main.hbs
@@ -1,3 +1,11 @@
-<h1>Welcome to your profile, {{user.username}}</h1>
-<img src="{{user.photoPath}}" alt="" srcset="">
-<p>TOKEN: {{user.accessToken}}</p>
+<img src="https://images.pexels.com/photos/1194412/pexels-photo-1194412.jpeg?auto=compress&cs=tinysrgb&h=650&w=940"
+  class="back-img" alt="background-pic">
+
+<div class="message media">
+  <img class="align-self-start mr-3 user-pic" src="{{user.photoPath}}" alt="User Picture">
+  <div class="media-body">
+    <h5 class="mt-0 mb-1">{{user.username}}</h5>
+       Many, many thanks for helping us at this alpha stage.
+    We'll get back to you very soon.
+  </div>
+</div>
