--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -10,10 +10,11 @@
 </head>
 
 <body class="m-0 p-0">
-  <div class="container-fluid m-0 p-0">
+
+ {{!--  <div class="container-fluid m-0 p-0">
     <nav class="navbar navbar-expand-lg navbar-light mb-2">
       <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link" href="/">Homepage</a></li>
+        <li class="nav-item"><a class="nav-link" href="/">Spotifind</a></li>
         {{#if user}}
         <li class="nav-item"><a class="nav-link" href="/profile">Profile</a></li>
         <li class="nav-item"><a class="nav-link" href="/auth/logout">Logout</a></li>
@@ -21,7 +22,8 @@
         <li class="nav-item"><a class="nav-link" href="/auth/login">Login</a></li>
         {{/if}}
       </ul>
-    </nav>
+    </nav> --}}
+    
     {{{body}}}
   </div>
 
