--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,4 +8,45 @@ a {
 nav {
   background-color: #1DB954; }
 
+.firstBack {
+  background-image: url("https://images.pexels.com/photos/21022/pexels-photo.jpg?auto=compress&cs=tinysrgb&h=650&w=940");
+  background-repeat: no-repeat;
+  overflow: hidden;
+  background-size: cover; }
+
+.user-pic {
+  border-radius: 50%;
+  margin: 0 auto; }
+
+.message {
+  color: black;
+  margin: 2em;
+  padding: 1em;
+  text-align: center;
+  font-size: 1.2em;
+  background-color: rgba(255, 255, 255, 0.4); }
+
+.back-img {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  /* Preserve aspet ratio */
+  min-width: 100%;
+  min-height: 100%; }
+
+.first-back-img {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  /* Preserve aspet ratio */
+  min-width: 100%;
+  min-height: 100%; }
+
+.spot-color {
+  background-color: #1DB954;
+  color: #191414;
+  margin-top: 20px; }
+
 /*# sourceMappingURL=style.css.map */
