--- a/views/error.hbs
+++ b/views/error.hbs
@@ -1,2 +1,4 @@
 <h1>Error!</h1>
 <h2>There was an error on the server! Check the console!</h2>
+<img src="https://images.pexels.com/photos/35202/eraser-office-supplies-office-office-accessories.jpg?auto=compress&cs=tinysrgb&h=350"
+   class="first-back-img" alt="background-jump-pic">
