--- a/views/not-found.hbs
+++ b/views/not-found.hbs
@@ -1,2 +1,5 @@
 <h1>404 Error</h1>
 <h2>This route does not exist on the app! Check if everything is ok!</h2>
+<img src="https://images.pexels.com/photos/262488/pexels-photo-262488.jpeg?auto=compress&cs=tinysrgb&h=650&w=940">
+
+
