--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -15,13 +15,18 @@ nav {
 .firstBack {
   background-image: url("https://images.pexels.com/photos/21022/pexels-photo.jpg?auto=compress&cs=tinysrgb&h=650&w=940");
   background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
   overflow: hidden;
   background-size: cover;
+  top: 0; 
+  left: 0; 
+  z-index: -1;
 }
 
 .user-pic {
   border-radius: 50%;
-  margin: 0 auto;
+  margin-bottom: 1em;
 }
 
 
@@ -62,5 +67,31 @@ nav {
   background-color: #1DB954;
   color: #191414;
   margin-top: 20px;
-
 }
+
+footer {
+  margin-top: 100px;
+}
+
+.card-text2 {
+  margin-top: 0.7em;
+}
+
+.cards {
+  margin-top: 100px;
+  margin-bottom: 50px;
+}
+
+$grid-breakpoints: (
+  xs: 0,
+  sm: 480px,
+  md: 768px,
+  lg: 1024px
+);
+
+$container-max-widths: (
+  sm: 420px,
+  md: 720px,
+  lg: 960px
+) 
+
