--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,15 +1,32 @@
 <section class="container-fluid">
 
-  <img src="https://images.pexels.com/photos/21022/pexels-photo.jpg?auto=compress&cs=tinysrgb&h=650&w=940" class="first-back-img"
-    alt="background-pic">
+  <img src="https://images.pexels.com/photos/373934/pexels-photo-373934.jpeg?auto=compress&cs=tinysrgb&h=650&w=940"
+   class="first-back-img" alt="background-jump-pic">
 
-  <div class="container message">
-    <p>Yo {{user.username}}, we believe we are made of what we listen to.</p>
-    <p>For that, we're builing a self knowledge experiment based on our spotify listening history.</p>
-    <p>We would love if you could share your Spotify account so we could train our models for an upcomming and totally
-      free service</p>
-    <p>One single click and we'll be able to move forward. Kind regards!</p>
-    <a class="btn btn-lg active spot-color row" href="/auth/spotify">Sign In with your Spotify Account</a>
+  <div class="container message rounded">
+    <h2 class="call">A-Yo!</h2>
+    <a class="btn btn-lg active spot-color row" href="/auth/spotify">Jump In with your Spotify Account</a>
   </div>
+
+  <div class="card-deck cards">
+  <div class="card">
+    <div class="card-body bg-light">
+      <h5 class="card-header bg-primary text-center">How it works</h5>
+      <p class="card-text card-text2">Out of your musical background we're able to profile your personality.</p>
+    </div>
+  </div>
+  <div class="card">
+    <div class="card-body bg-light">
+      <h5 class="card-header bg-info text-center">Personalities</h5>
+      <p class="card-text card-text2">Listening to music is something you do alone and with friends. The way you pick your songs tell a whole lot about yourself.</p>
+    </div>
+  </div>
+  <div class="card">
+    <div class="card-body bg-light">
+      <h5 class="card-header bg-secondary text-center">More like you</h5>
+      <p class="card-text card-text2">Join our chat rooms and meet alike personalites to discuss music and other unusual preferences.</p>
+    </div>
+  </div>
+</div>
 
 </section>
