--- a/views/index.hbs
+++ b/views/index.hbs
@@ -24,7 +24,7 @@
   <div class="card">
     <div class="card-body bg-light">
       <h5 class="card-header bg-secondary text-center">More like you</h5>
-      <p class="card-text card-text2">Join our chat rooms and meet alike personalites to discuss music and other unusual preferences.</p>
+      <p class="card-text card-text2">Join our chat rooms and meet alike personalities to discuss music and other unusual preferences.</p>
     </div>
   </div>
 </div>
