--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -27,9 +27,9 @@
 
   <footer class="navbar nav-bottom navbar-dark bg-dark nav justify-content-end">
     <ul>
-      <li class="navbar-brand align-middle" href="#">About us</li>
-      <li class="navbar-brand align-middle" href="https://twitter.com/SpotifyPlatform">Spotify</li>
-      <li class="navbar-brand align-middle" href="https://www.ironhack.com/en">Ironhack</li>
+      <li class="navbar-brand align-middle" ><a href="#">About us</a></li>
+      <li class="navbar-brand align-middle"><a href="https://twitter.com/SpotifyPlatform">Spotify</a></li>
+      <li class="navbar-brand align-middle"><a href="https://www.ironhack.com/en">Ironhack</a></li>
     </ul>
   </footer>
 
