--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,32 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<section class="container-fluid">
 
-<a class="btn btn-success" href="/auth/spotify">Sign In with Spotify Account</a>
+  <img src="https://images.pexels.com/photos/373934/pexels-photo-373934.jpeg?auto=compress&cs=tinysrgb&h=650&w=940"
+   class="first-back-img" alt="background-jump-pic">
+
+  <div class="container message rounded">
+    <h2 class="call">A-Yo!</h2>
+    <a class="btn btn-lg active spot-color row" href="/auth/spotify">Jump In with your Spotify Account</a>
+  </div>
+
+  <div class="card-deck cards">
+  <div class="card">
+    <div class="card-body bg-light">
+      <h5 class="card-header bg-primary text-center">How it works</h5>
+      <p class="card-text card-text2">Out of your musical background we're able to profile your personality.</p>
+    </div>
+  </div>
+  <div class="card">
+    <div class="card-body bg-light">
+      <h5 class="card-header bg-info text-center">Personalities</h5>
+      <p class="card-text card-text2">Listening to music is something you do alone and with friends. The way you pick your songs tell a whole lot about yourself.</p>
+    </div>
+  </div>
+  <div class="card">
+    <div class="card-body bg-light">
+      <h5 class="card-header bg-secondary text-center">More like you</h5>
+      <p class="card-text card-text2">Join our chat rooms and meet alike personalities to discuss music and other unusual preferences.</p>
+    </div>
+  </div>
+</div>
+
+</section>
