--- a/views/profile/main.hbs
+++ b/views/profile/main.hbs
@@ -1,3 +1,55 @@
-<h1>Welcome to your profile, {{user.username}}</h1>
-<img src="{{user.photoPath}}" alt="" srcset="">
-<p>TOKEN: {{user.accessToken}}</p>
+
+
+
+<section class="container">
+
+<div class="message justify-content-center w-50">
+  <img class="align-self-start mr-3 user-pic" src="{{user.photoPath}}" alt="User Picture">
+  <div class="media-body align-self-center text-left">
+    <h5 class="mt-0 mb-1 text-center">Dear {{user.username}},</h5>
+       <p class="text-center">You're about to deepen your self-knowledge based on your musical taste.</p> 
+  </div>
+</div>
+
+<div class="card w-75 justify-content-center">
+  <img class="card-img-top" src="https://images.pexels.com/photos/175701/pexels-photo-175701.jpeg?auto=compress&cs=tinysrgb&h=350">
+  <div class="card-body">
+    <h5 class="card-title">persona</h5>
+    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+  </div>
+</div>
+
+</section>
+
+<hr>
+<section>
+{{!-- <div>
+<div ng-repeat="artist in shortTermArtists track by $index " class="track-list-item ng-scope" style="">
+                <div class="track-list-item-info">
+                  <img src="https://i.scdn.co/image/b8dbe88b24eaada73a4543e2c61e1f5cdd3cae4b" alt="">
+
+                  <a class="track-list-item-info-text" ng-href="spotify:artist:6cHQUDAPGKRE2NbVjBlOcz" href="spotify:artist:6cHQUDAPGKRE2NbVjBlOcz">
+                    <h3 class="ng-binding">Erasmo Carlos</h3>
+                    <div class="track-list-item-info-genres">
+                      <p class="ng-binding">brazilian rock /</p>
+                      <p class="ng-binding">jovem guarda</p>
+                    </div>
+                    <p class="stars ng-binding">★★</p>
+                  </a>
+                </div>
+                <div class="track-list-item-right">
+                  <p class="ng-binding">1</p>
+                </div>
+
+              </div>
+</div> --}}
+</section>
+
+<section>
+  chat
+</section>
+
+<section>
+  recomendations
+</section>
+
