--- a/views/about.hbs
+++ b/views/about.hbs
@@ -1,1 +1,50 @@
-<h1>By Rômulo Franca & João Caetano - 2018</h1>
+<section>
+  <div class="alert alert-primary bigger-font-size">
+    <dt>Reason Why</dt>
+    <dd>There’s a wildly funny movie with Kelvin Kline called "In and Out" that shows how music taste can define us.
+      We’re willing to understand groups of listeners under a new light, not the usual “people like you liked this”,
+      but how people like you look like. The main traits that “people alike” share.</dd>
+  </div>
+
+  <div class="embed-responsive embed-responsive-16by9">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/fxD7Ty5ZhQE" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen></iframe>
+  </div>
+
+<div class="alert alert-warning engine bigger-font-size">
+  <dt>Our Engine</dt>
+  <dd>Collecting data out of a number of Spotify users we are able to build major groups that share common traits like
+    age brackets, preferred beats and other inclinations towards music in life. All that together build up a shape of
+    you.</dd>
+</div>
+
+  <div class="embed-responsive embed-responsive-16by9">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/krg5W_XJ7Bc" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </div>
+
+  <div class="row cards-profile">
+    <div class="col-sm-6">
+      <div class="card">
+        <img class="card-img-top" src="https://www.facebook.com/photo.php?fbid=175653533218992&set=a.175653549885657&type=3&theater" alt="Romulo's picture">
+        <div class="card-body">
+          <h5 class="card-title">Rômulo Franca</h5>
+          <p class="card-text">The man version of a Swiss knife, end to end full stack developer, going from basic html
+            to an up in the air application.</p>
+          <a href="https://www.linkedin.com/in/romulofranca/" class="btn btn-primary">Linkedin Profile</a>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-6">
+      <div class="card">
+        <img class="card-img-top" src="https://www.facebook.com/photo.php?fbid=10156512657622802&set=a.500127857801&type=3&theater" alt="Joao's picture">
+        <div class="card-body">
+          <h5 class="card-title">João Caetano</h5>
+          <p class="card-text">Marketing to the bones, seasoned business intelligence professional, now bending to
+            software development aiming to build heartful machines.</p>
+          <a href="https://www.linkedin.com/in/joao-eduardo-caetano/" class="btn btn-primary">Linkedin Profile</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</section>
