--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -1,1 +1,6 @@
-<a class="btn btn-success" href="/auth/spotify">Sign In with Spotify Account</a>
+  <img src="https://images.pexels.com/photos/373934/pexels-photo-373934.jpeg?auto=compress&cs=tinysrgb&h=650&w=940"
+   class="first-back-img" alt="background-jump-pic">
+
+<div class="container message rounded">
+<a class="btn btn-lg active spot-color row" href="/auth/spotify">Jump In with your Spotify Account</a>
+</div>
