--- a/views/profile/main.hbs
+++ b/views/profile/main.hbs
@@ -3,7 +3,7 @@
 
 <section class="container">
 
-<div class="message justify-content-center w-50">
+<div class="message mx-auto w-50">
   <img class="align-self-start mr-3 user-pic" src="{{user.photoPath}}" alt="User Picture">
   <div class="media-body align-self-center text-left">
     <h5 class="mt-0 mb-1 text-center">Dear {{user.username}},</h5>
@@ -11,7 +11,7 @@
   </div>
 </div>
 
-<div class="card w-75 justify-content-center">
+<div class="card w-75 mx-auto">
   <img class="card-img-top" src="https://images.pexels.com/photos/175701/pexels-photo-175701.jpeg?auto=compress&cs=tinysrgb&h=350">
   <div class="card-body">
     <h5 class="card-title">persona</h5>
