--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -55,7 +55,8 @@ nav {
   margin-top: 20px; }
 
 footer {
-  margin-top: 100px; }
+  margin-top: 100px;
+  margin-bottom: 0; }
 
 .card-text2 {
   margin-top: 0.7em; }
@@ -63,5 +64,15 @@ footer {
 .cards {
   margin-top: 100px;
   margin-bottom: 50px; }
+
+.cards-profile {
+  margin-top: 1em; }
+
+.engine {
+  margin-top: 1em;
+  margin-bottom: 1.5em; }
+
+.bigger-font-size {
+  font-size: 1.5em; }
 
 /*# sourceMappingURL=style.css.map */
